# LocaleKit

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml  test-build.yml
app/: globals.css  layout.tsx  page.tsx
components/: ConsoleViewer.tsx  CustomSelect.tsx  DraggableHeader.tsx  InlineTranslationProgress.tsx  JSONStructureViewer.tsx  LanguageSelector.tsx  LocaleProvider.tsx  SettingsModal.tsx  Tooltip.tsx  TranslationProgress.tsx
i18n/: request.ts
lib/: chunking.ts  languages.ts  llm.ts  models.ts  secure-keys.ts  toon.ts  types.ts  usage-tracker.ts  useConsoleLogs.ts  useTheme.ts  utils.ts
lib/i18n/: locale.ts
messages/: de_de.json  en_gb.json  fr_fr.json  tr_tr.json
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
